Successfully restored deleted folders and organized project structure

--- a/tribute/index.html
+++ b/tribute/index.html
@@ -28,7 +28,7 @@
                 The impact of that environment often makes it hard to function and thrive. 
                 You may look back and think about all the things you could have done better if not for those struggles. 
                 <!--I wrote this about myself cause I had a long way to go, still fixing mysel from a dysfunctional family for 23 years of my life, It's not easy 
-                as it seems, I know ther are a lot of things to learn independently, but atleast I am safe now in where I am now. -->
+                as it seems, I know ther are a lot of things to learn independently, but atleast I am safe now in where I am now. This message again is for my old self-->
             </p>
         </section>
 
